fixing contrast

--- a/bountiful/styles/small.css
+++ b/bountiful/styles/small.css
@@ -183,7 +183,6 @@ main p {
     bottom: 10px;
     right: 10px;
     background-color: #ffdc47;
-    opacity: 0.95;
     padding:15px;
     border-radius: 10px;
     text-decoration: none;
@@ -192,7 +191,7 @@ main p {
 }
 
 #hero a:hover {
-    background-color: rgba(0, 0, 0, 0.7);
+    background-color: rgba(255, 255, 255, 0.8);
 }
 
 #weather {
@@ -255,6 +254,7 @@ main p {
 #coastal h3 {
     font-size: 1.9rem;
     background-color: #f29213;
+    color: black;
 }
 #coastal p {
     margin: 3px;
